# CliMa

./: .gitignore  Cargo.toml
backend/: Cargo.toml
backend/clima-core/: Cargo.toml  clima.sqlite
backend/clima-core/migrations/: 20230218112753_initial_database_structure.sql  20230218180318_postcode_mapping_data.sql
backend/clima-core/queries/: get_assortment.sql
backend/clima-core/src/: main.rs
backend/clima-types/: Cargo.toml
backend/clima-types/src/: lib.rs
clima-core/: .env  Cargo.toml
clima-core/migrations/: 20230218112753_initial_database_structure.sql
clima-core/src/: main.rs
clima-interface/: Cargo.toml  index.html  output.css  tailwind.config.js  tailwind.css
clima-interface/src/: call.rs  client.rs  main.rs  utils.rs
clima-types/src/: lib.rs
frontend/: tailwind.config.js  tsconfig.json
frontend/components/: index.tsx  minimal_menu.tsx
frontend/pages/: _app.tsx  index.tsx  testing.tsx
frontend/pages/client/: index.tsx
frontend/public/: client-menu-icon.tsx
