[package]
name = "clima-interface"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clima-types = {path = "../clima-types/"}
gloo-net = "0.2.6"
log = "0.4.17"
sycamore = { version = "0.8.2", features = ["futures", "sycamore-futures", "suspense"] }
sycamore-router = "0.8.0"
wasm-logger = "0.2.0"
